feat: Ligação da telas e organização do código

--- a/app/src/main/res/layout/activity_calc_imc.xml
+++ b/app/src/main/res/layout/activity_calc_imc.xml
@@ -87,6 +87,7 @@
         android:layout_width="214dp"
         android:layout_height="51dp"
         android:hint="@string/peso_kg"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.535"
@@ -112,6 +113,7 @@
         android:layout_width="216dp"
         android:layout_height="54dp"
         android:hint="@string/altura_cm"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
