--- a/app/src/main/res/layout/activity_tb_imc.xml
+++ b/app/src/main/res/layout/activity_tb_imc.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/btnVolta"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ImcActivity">
@@ -217,5 +218,20 @@
         app:layout_constraintVertical_bias="0.176"
         app:srcCompat="@drawable/logo" />
 
+    <TextView
+        android:id="@+id/btnVoltar"
+        android:layout_width="159dp"
+        android:layout_height="38dp"
+        android:autoText="false"
+        android:background="@color/bar_blue"
+        android:text="@string/voltar"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.848" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
